[gd_scene load_steps=8 format=2]

[ext_resource path="res://layouts/bg.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/styles/main_theme.tres" type="Theme" id=2]
[ext_resource path="res://layouts/Btn.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/img/flag_en.png" type="Texture" id=4]
[ext_resource path="res://screens/Home/Home.gd" type="Script" id=5]
[ext_resource path="res://layouts/PopupRules.tscn" type="PackedScene" id=6]
[ext_resource path="res://layouts/ExitBtn/ExitBtn.tscn" type="PackedScene" id=7]

[node name="Home" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -347.24, -305.079 )
theme = ExtResource( 2 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" parent="." instance=ExtResource( 1 )]

[node name="Menu" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
margin_left = 387.0
margin_top = 170.0
margin_right = 637.0
margin_bottom = 430.0
custom_constants/separation = 20

[node name="BtnPlay" parent="Menu/VBoxContainer" instance=ExtResource( 3 )]
margin_right = 250.0
text = "PLAY"

[node name="BtnMulti" parent="Menu/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 70.0
margin_right = 250.0
margin_bottom = 120.0
text = "MULTIPLAYER"

[node name="BtnRules" parent="Menu/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 140.0
margin_right = 250.0
margin_bottom = 190.0
text = "RULES"

[node name="LangSwitcher" type="TextureButton" parent="Menu/VBoxContainer"]
margin_left = 100.0
margin_top = 210.0
margin_right = 150.0
margin_bottom = 260.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 4
size_flags_vertical = 0
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="PopupRules" parent="." instance=ExtResource( 6 )]

[node name="ExitBtn" parent="." instance=ExtResource( 7 )]
[connection signal="pressed" from="Menu/VBoxContainer/BtnPlay" to="." method="_on_BtnPlay_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/BtnMulti" to="." method="_on_BtnMulti_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/BtnRules" to="." method="_on_BtnRules_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/LangSwitcher" to="." method="_on_LangSwitcher_pressed"]
